--- a/index.html
+++ b/index.html
@@ -1,82 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Khusboo Kumari</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.icon">
+  </head>
+  <body>
+  <div class="top-container">
+    <h1>I'm Khusboo.</h1>
+    <p>a Developer</p>
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="D:\Download\manager.png" alt="">
+      <h2>Hello</h2>
+      <p>I'm am looking for an opportunity to use my skills ,for solving real life problems and learning new skills .</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills</h2>
+      <div class="skill-row">
+        <img class="" src="D:\Download\website-design.png" alt="">
+        <h3>Designe and Development</h3>
+        <p>I have an interest in designing and developing websites.Also along with designing and developing a website ,i'm learning about new skills and tools which will be helpfull in making a high performing and attractive websites.</p>
+      </div>
+      <div class="skill-row">
+        <img class="" src="D:\Download\brain.png" alt="">
+        <h3>Machine Learning</h3>
+        <p>I made a group project using ML. We made a simple fashion recomendation system, which gives us suggestions according to our search.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Grow your Business</h3>
+      <img src="D:\Download\grow-up.png" alt="">
+      <p>Are you looking for a full stack  Website Developer, who can help you to bring your business online and insure your increasing profites in it ?</p>
+    </p>If yes? Then feel free to get in touch with me. </p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    </div>
+  </div>
 
-<head>
-  <meta charset="utf-8">
-  <title>Khusboo's Personal Site</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img class="circular" src="image/clouds.png" alt="Khusboo profile picture"></td>
-      <td><h1>Khusboo Kumari</h1>
-      <p><em>Hello</em> <strong>Everyone</strong></p>
-      <p>I am a  <strong><a href="https://www.rasmussen.edu/degrees/technology/blog/what-does-software-developer-do/">Software Developer</a></strong>, interested in Developing Websites </p></td>
-    </tr>
-  </table>
-  <hr>
-  <h2>Books i Like</h2>
-  <p><em>Everting ,Mostly Horror</em></p>
-  <ul>
-    <li>Complete Software Development Courses</li>
-    <li>Common Books for Programming</li>
-  </ul>
-  <hr>
-  <h2>My Hobbies</h2>
-  <ol>
-    <li>Sketching</li>
-    <li>Reading</li>
-    <li>Sleeping</li>
-  </ol>
-  <a href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">Download HTML cheat sheet</a>
-  <hr>
-  <h3>Contact info</h3>
-  <a href="contact.html">My Contact</a>
-  <hr>
-  <h2>Skills</h2>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <p>© 2018 Name Surname.</p>
+  </div>
 
-  <table>
-  <tr>
-    <td><table cellspacing="20">
-      <tr>
-        <td>Competitive Programming</td>
-        <td>🌟🌟🌟</td>
-      </tr>
-      <tr>
-        <td>Hackerrank</td>
-        <td>🌟🌟🌟🌟🌟</td>
-      </tr>
-      <tr>
-        <td>codechef</td>
-        <td>🌟</td>
-      </tr>
-    </table></td>
-    <td><table>
-    <tr>
-      <td><table cellspacing="20">
-        <tr>
-          <td>HTML and CSS</td>
-          <td>🌟🌟🌟</td>
-        </tr>
-        <tr>
-          <td>Logic Building</td>
-          <td>🌟🌟</td>
-        </tr>
-        <tr>
-          <td>DBMS</td>
-          <td>🌟</td>
-        </tr>
-      </table></td>
-      <td></td>
-    </tr>
-    </table></td>
-  </tr>
-  </table>
-
-  <a href="form.html">Form</a>
-
-</body>
-
+  </body>
 </html>
