--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <p>© 2018 Name Surname.</p>
+    <p>© 2022 Khusboo Kumari.</p>
   </div>
 
   </body>
